[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--disable-warnings",
]

[tool.pytest.ini_options.markers]
slow = "slow running tests"
integration = "integration tests"
unit = "unit tests"